Smart link can erroneously move caret after an URL when typing immediately before it https://bugs.webkit.org/show_bug.cgi?id=92812

Reviewed by Enrica Casucci.

Source/WebCore:

The bug was caused by smart link being triggered even when a user finished typing a word
immediately before an URL. We already had a logic to avoid smart-linking an URL when the caret
was after the URL but we were missing a check for when the caret is before the URL.

Fixed the bug by adding this check.

Test: editing/inserting/smart-link-when-caret-is-moved-before-URL.html

* editing/Editor.cpp:
(WebCore::Editor::markAndReplaceFor):

LayoutTests:

Add a regression for typing immediately before an URL while smart link is enabled.
WebKit should not be moving the caret erroneously.

* editing/inserting/smart-link-when-caret-is-moved-before-URL-expected.txt: Added.
* editing/inserting/smart-link-when-caret-is-moved-before-URL.html: Added.


Canonical link: https://commits.webkit.org/126880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@141618 268f45cc-cd09-0410-ab3c-d52691b4dbfc